--- a/app/i18n/Syscon/fr_FR/dictionary.csv
+++ b/app/i18n/Syscon/fr_FR/dictionary.csv
@@ -1,11 +1,77 @@
-"Order Total","Total marchandise"
-"Order Total Excl. Tax","Total marchandise HT"
-"Order Total Incl. Tax","Total marchandise TTC"
-"Order Total Report","Rapport de total marchandise"
-"Order Totals","Totaux marchandise"
+"Order Total","Total"
+"Order Total Excl. Tax","Total marchandise TVA excl."
+"Order Total Incl. Tax","Total marchandise TVA incl."
+"Order Total Report","Rapport de total"
+"Order Totals","Totaux"
 "Ship To","Livrer à"
 "Ship To:","Livrer à :"
 "Regular Price","Prix de vente"
 "Regular Price:","Prix de vente:"
 "Your %store_name provisional order confirmation","Confirmation provisoire de votre commande %store_name"
 "You will soon receive an definitive order confirmation email.","Vous allez bientôt recevoir un email de confirmation définitive."
+"Copy of your order confirmation","Copie de votre commande"
+"Your order confirmation","Confirmation de votre commande"
+"Your order update","Mise à jour de votre commande"
+"Your shipment confirmation","Confirmation de livraison"
+"Your shipment update","Mise à jour de votre livraison"
+"Thank you for your order from our webshop.","Merci pour votre commande à notre commerce en ligne."
+"Once your package ships we will send an email with a link to track your order.","Nous vous informons par courrier électronique dès qu'elle est prête à l'usine pour l'expédition."
+"Tax","TVA"
+"Grand Total","Total marchandise"
+"Grand Total (Base)","Total (devise de base)"
+"Grand Total (Purchased)","Total (commandé)"
+"Grand Total:","Total marchandise :"
+"(Incl. Tax)",(TVA incl.)
+"Apply discount on price including tax is calculated based on store tax, if ""Apply Tax after Discount"" is selected.","L’application du montant de rédu
+ction sur les prix TVA incl. est calculée sur la base de la taxe de la boutique si ""Appliquer les taxes après la remise"" est sélectionnée."
+"Apply discount on price including tax is calculated based on store tax if ""Apply Tax after Discount"" is selected.","L’application du montant de réduc
+tion sur les prix TVA incl. est calculée sur la base de la taxe de la boutique si ""Appliquer les taxes après la remise"" est sélectionnée."
+"Both (without and with tax)","Les deux (TVA excl. et TVA incl.)"
+"Grand Total (Incl.Tax)","Total (TVA incl.)"
+"Grand Total (Incl. Tax)","Total (TVA incl.)"
+"Grand Total Incl. Tax","Total TVA incl."
+"Inc. Tax",TVA incl.
+"Incl. Tax",TVA incl.
+"Incl. Tax:","TVA incl. :"
+"Include Tax In Grand Total","TVA incl. dans le total"
+"Including Tax",TVA incl.
+"Including and Excluding Tax","TVA excl. et TVA incl."
+"Order Total Incl. Tax","Total de la commande TVA incl."
+"Refund Shipping (Incl. Tax)","Remboursement livraison (TVA incl.)"
+"Shipping & Handling (Incl.Tax)","Livraison et traitement (TVA incl.)"
+"Shipping (Incl. Tax)","Livraison et traitement (TVA incl.)"
+"Shipping Incl. Tax (%1)","Livraison TVA incl. (%1)"
+"Subtotal (Incl. Tax)","Sous-total (TVA incl.)"
+"Subtotal (Incl.Tax)","Sous-total (TVA incl.)"
+"Subtotal Incl. Tax","Sous-total TVA incl."
+"This sets whether catalog prices entered by admin include tax.","Défini si les prix saisis dans l’administration sont TVA incl.."
+"This sets whether catalog prices entered from Magento Admin include tax.","Défini si les prix saisis dans l’administration sont TVA incl.."
+"This sets whether shipping amounts entered by admin or obtained from gateways include tax.","Défini si les prix de livraison saisis dans l’administrati
+on ou obtenus depuis une passerelle sont TVA incl.."
+"This sets whether shipping amounts entered from Magento Admin or obtained from gateways include tax.","Les montants de livraison saisis dans l’administ
+ration ou récupérés depuis les passerelles doivent-ils être interprétés en TVA incl.."
+"Total (inc)","Total (TVA incl.)"
+"Total Incl. Tax","Total TVA incl."
+"Total incl. tax","Total TVA incl."
+"Unit Price Incl. Tax","Prix Unitaire TVA incl."
+"When catalog price includes tax, enable this setting to fix the price no matter what the customer's tax rate.","Lorsque les prix catalogue sont saisis 
+en TVA incl., activer ce paramètre pour fixer le prix peut importe le taux de taxe client."
+"(Excl. Tax)",(TVA excl.)
+"Excl. Tax:","TVA excl. :"
+"Excl. tax:","TVA excl. :"
+"Grand Total (Excl. Tax)","Total (TVA excl.)"
+"Grand Total (Excl.Tax)","Total (TVA excl.)"
+"Grand Total Excl. Tax","Total TVA excl."
+"Refund Shipping (Excl. Tax)","Remboursement livraison (TVA excl.)"
+"Shipping & Handling (Excl.Tax)","Livraison et traitement (TVA excl.)"
+"Shipping (Excl. Tax)","Livraison (TVA excl.)"
+"Shipping Excl. Tax (%1)","Livraison TVA excl. (%1)"
+"Subtotal (Excl. Tax)","Sous-total (TVA excl.)"
+"Subtotal (Excl.Tax)","Sous-total (TVA excl.)"
+"Subtotal Excl. Tax","Sous-total TVA excl."
+"Total (ex)","Total (TVA excl.)"
+"Unit Price Excl. Tax","Prix Unitaire TVA excl."
+"Excl. Tax","TVA excl."
+"Excl. tax","TVA excl."
+"This is Custom Text","C'est du texte"
+"Reset your %store_name password","Réinitialiser votre mot de passe"
